--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "prismjs": "^1.29.0",
         "quill": "^1.3.7",
         "rxjs": "~7.8.1",
+        "sweetalert2": "^11.10.7",
         "tslib": "^2.5.0",
         "zone.js": "~0.14.0"
     },
