--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fullcalendar/timegrid": "^6.0.3",
         "axios": "^1.6.8",
         "chart.js": "^3.3.2",
+        "file-saver": "^2.0.5",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
         "primeng": "17.2.0",
@@ -36,6 +37,7 @@
         "rxjs": "~7.8.1",
         "sweetalert2": "^11.10.7",
         "tslib": "^2.5.0",
+        "xlsx": "^0.18.5",
         "zone.js": "~0.14.0"
     },
     "devDependencies": {
